[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/tileset/nature.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/Items/Potion.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Characters/Moop.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Room3.gd" type="Script" id=5]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/music/level-up-by-kevin-macleod-from-filmmusic-io.mp3" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 912.566, 20.8534 )

[node name="Room3" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 297.896 ]
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -786392, 2, 0, -786391, 2, 2, -720856, 2, 65536, -720855, 2, 65538, -655320, 2, 65536, -655319, 2, 65538, -589784, 2, 65536, -589783, 2, 65538, -524248, 2, 65536, -524247, 2, 65538, -458712, 2, 65536, -458711, 2, 65538, -393176, 2, 65536, -393175, 2, 65538, -327640, 2, 65536, -327639, 2, 65538, -262104, 2, 65536, -262103, 2, 65538, -196568, 2, 65536, -196567, 2, 65538, -131032, 2, 65536, -131031, 2, 65538, -65496, 2, 65536, -65495, 2, 65538, 40, 2, 65536, 41, 2, 65538, 65576, 2, 65536, 65577, 2, 65538, 131112, 2, 65536, 131113, 2, 65538, 196648, 2, 65536, 196649, 2, 65538, 262184, 2, 65536, 262185, 2, 65538, 327720, 2, 65536, 327721, 2, 65538, 393256, 2, 65536, 393257, 2, 65538, 458792, 2, 65536, 458793, 2, 65538, 524328, 2, 65536, 524329, 2, 65538, 589864, 2, 65536, 589865, 2, 65538, 655400, 2, 65536, 655401, 2, 65538, 720936, 2, 65536, 720937, 2, 65538, 786472, 2, 65536, 786473, 2, 65538, 852008, 2, 65536, 852009, 2, 65538, 917544, 2, 65536, 917545, 2, 65538, 983080, 2, 65536, 983081, 2, 65538, 1048616, 2, 65536, 1048617, 2, 65538, 1114152, 2, 65536, 1114153, 2, 65538, 1179688, 2, 65536, 1179689, 2, 65538, 1245224, 2, 65536, 1245225, 2, 65538, 1310760, 2, 65536, 1310761, 2, 65538, 1441756, 2, 0, 1441757, 2, 1, 1441758, 2, 1, 1441759, 2, 1, 1441760, 2, 1, 1441761, 2, 1, 1441762, 2, 1, 1441763, 2, 1, 1441764, 2, 1, 1441765, 2, 1, 1441766, 2, 1, 1441767, 2, 1, 1441768, 2, 1, 1441769, 2, 1, 1441770, 2, 1, 1441771, 2, 1, 1441772, 2, 1, 1441773, 2, 1, 1441774, 2, 1, 1441775, 2, 1, 1441776, 2, 1, 1441777, 2, 1, 1441778, 2, 1, 1441779, 2, 1, 1441780, 2, 2, 1441783, 2, 0, 1441784, 2, 1, 1441785, 2, 1, 1441786, 2, 1, 1441787, 2, 1, 1441788, 2, 1, 1441789, 2, 1, 1441790, 2, 1, 1441791, 2, 1, 1376256, 2, 1, 1376257, 2, 1, 1376258, 2, 1, 1376259, 2, 1, 1376260, 2, 1, 1376261, 2, 1, 1376262, 2, 2, 1376266, 2, 0, 1376267, 2, 1, 1376268, 2, 1, 1376269, 2, 1, 1376270, 2, 1, 1376271, 2, 1, 1376272, 2, 1, 1376273, 2, 1, 1376274, 2, 1, 1376275, 2, 1, 1376276, 2, 1, 1376277, 2, 1, 1376278, 2, 1, 1376279, 2, 1, 1376280, 2, 1, 1376281, 2, 1, 1376282, 2, 1, 1376283, 2, 1, 1376284, 2, 1, 1376285, 2, 1, 1376286, 2, 1, 1376287, 2, 1, 1376288, 2, 1, 1376289, 2, 1, 1376290, 2, 1, 1376291, 2, 1, 1376292, 2, 1, 1376293, 2, 1, 1376294, 2, 1, 1376295, 2, 1, 1376296, 2, 65537, 1376297, 2, 65538, 1507292, 2, 65536, 1507293, 2, 65537, 1507294, 2, 65537, 1507295, 2, 65537, 1507296, 2, 65537, 1507297, 2, 65537, 1507298, 2, 65537, 1507299, 2, 65537, 1507300, 2, 65537, 1507301, 2, 65537, 1507302, 2, 65537, 1507303, 2, 65537, 1507304, 2, 65537, 1507305, 2, 65537, 1507306, 2, 65537, 1507307, 2, 65537, 1507308, 2, 65537, 1507309, 2, 65537, 1507310, 2, 65537, 1507311, 2, 65537, 1507312, 2, 65537, 1507313, 2, 65537, 1507314, 2, 65537, 1507315, 2, 65537, 1507316, 2, 65538, 1507319, 2, 65536, 1507320, 2, 65537, 1507321, 2, 65537, 1507322, 2, 65537, 1507323, 2, 65537, 1507324, 2, 65537, 1507325, 2, 65537, 1507326, 2, 65537, 1507327, 2, 65537, 1441792, 2, 65537, 1441793, 2, 65537, 1441794, 2, 65537, 1441795, 2, 65537, 1441796, 2, 65537, 1441797, 2, 65537, 1441798, 2, 65538, 1441802, 2, 65536, 1441803, 2, 65537, 1441804, 2, 65537, 1441805, 2, 65537, 1441806, 2, 65537, 1441807, 2, 65537, 1441808, 2, 65537, 1441809, 2, 65537, 1441810, 2, 65537, 1441811, 2, 65537, 1441812, 2, 65537, 1441813, 2, 65537, 1441814, 2, 65537, 1441815, 2, 65537, 1441816, 2, 65537, 1441817, 2, 65537, 1441818, 2, 65537, 1441819, 2, 65537, 1441820, 2, 65537, 1441821, 2, 65537, 1441822, 2, 65537, 1441823, 2, 65537, 1441824, 2, 65537, 1441825, 2, 65537, 1441826, 2, 65537, 1441827, 2, 65537, 1441828, 2, 65537, 1441829, 2, 65537, 1441830, 2, 65537, 1441831, 2, 65537, 1441832, 2, 65537, 1441833, 2, 65538, 1572828, 2, 131072, 1572829, 2, 131073, 1572830, 2, 131073, 1572831, 2, 131073, 1572832, 2, 131073, 1572833, 2, 131073, 1572834, 2, 131073, 1572835, 2, 131073, 1572836, 2, 131073, 1572837, 2, 131073, 1572838, 2, 131073, 1572839, 2, 131073, 1572840, 2, 131073, 1572841, 2, 131073, 1572842, 2, 131073, 1572843, 2, 131073, 1572844, 2, 131073, 1572845, 2, 131073, 1572846, 2, 131073, 1572847, 2, 131073, 1572848, 2, 131073, 1572849, 2, 131073, 1572850, 2, 131073, 1572851, 2, 131073, 1572852, 2, 131074, 1572855, 2, 131072, 1572856, 2, 131073, 1572857, 2, 131073, 1572858, 2, 131073, 1572859, 2, 131073, 1572860, 2, 131073, 1572861, 2, 131073, 1572862, 2, 131073, 1572863, 2, 131073, 1507328, 2, 131073, 1507329, 2, 131073, 1507330, 2, 131073, 1507331, 2, 131073, 1507332, 2, 131073, 1507333, 2, 131073, 1507334, 2, 131074, 1507338, 2, 131072, 1507339, 2, 131073, 1507340, 2, 131073, 1507341, 2, 131073, 1507342, 2, 131073, 1507343, 2, 131073, 1507344, 2, 131073, 1507345, 2, 131073, 1507346, 2, 131073, 1507347, 2, 131073, 1507348, 2, 131073, 1507349, 2, 131073, 1507350, 2, 131073, 1507351, 2, 131073, 1507352, 2, 131073, 1507353, 2, 131073, 1507354, 2, 131073, 1507355, 2, 131073, 1507356, 2, 131073, 1507357, 2, 131073, 1507358, 2, 131073, 1507359, 2, 131073, 1507360, 2, 131073, 1507361, 2, 131073, 1507362, 2, 131073, 1507363, 2, 131073, 1507364, 2, 131073, 1507365, 2, 131073, 1507366, 2, 131073, 1507367, 2, 131073, 1507368, 2, 131073, 1507369, 2, 131074 )
__meta__ = {
"_edit_lock_": true
}

[node name="Moop" parent="." instance=ExtResource( 4 )]
position = Vector2( -37.5065, 217.768 )

[node name="CurePotion" parent="." instance=ExtResource( 2 )]
position = Vector2( 40.6533, 328.992 )

[node name="SpeedUpPotion" parent="." instance=ExtResource( 2 )]
position = Vector2( 388.601, 328.992 )
type = 3

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 568.694, 328.992 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PauseMenu" parent="." instance=ExtResource( 6 )]
items = [ "Resume", null, 0, false, false, 0, 0, null, "", false, "Main Menu", null, 0, false, false, 1, 0, null, "", false ]

[node name="TimeLbl" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainTimer" type="Timer" parent="."]

[node name="ReadTimer" type="Timer" parent="."]

[node name="RespawnTrigger" type="Area2D" parent="."]
position = Vector2( 128.434, 470.331 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RespawnTrigger"]
position = Vector2( -60, 0 )
shape = SubResource( 1 )

[connection signal="body_entered" from="CurePotion" to="." method="_on_CurePotion_body_entered"]
[connection signal="body_entered" from="SpeedUpPotion" to="." method="_on_SpeedUpPotion_body_entered"]
[connection signal="id_pressed" from="PauseMenu" to="." method="_on_PauseMenu_id_pressed"]
[connection signal="timeout" from="MainTimer" to="." method="_on_MainTimer_timeout"]
[connection signal="timeout" from="ReadTimer" to="." method="_on_ReadTimer_timeout"]
[connection signal="body_entered" from="RespawnTrigger" to="." method="_on_RespawnTrigger_body_entered"]
